# pinch

./: Cargo.toml  Makefile  README.md  example-layout.yaml  pinch.yaml
src/: app.rs  cli.rs  config.rs  default_config.yaml  events.rs  main.rs  pane.rs  process.rs  state.rs  ui.rs
src/process/: mod.rs  panes.rs  ptys.rs  watchers.rs
src/ui/: inputs.rs  layouts.rs  mod.rs  rendering.rs
