[package]
name = "pinch"
version = "1.0.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shlex = "2.0.1"
tokio = { version = "1.52.3", features = ["full"] }
vt100 = "0.16.2"
tui-term = "0.3"
notify = "8.2.0"
